# FamilyTree

./: .clang-format  .gitignore  CMakeLists.txt  Family_Tree.cpp  Feedback.md  FileHandling.cpp  LinkedList.h  Menu.h  Node.h  Person.h  README.md
.github/workflows/: config.yml
application/: CMakeLists.txt  Family_Tree.cpp
include/: Date.hpp  ExceptionHandling.h  ExceptionHandling.hpp  Family_Tree.cpp  FileHandling.cpp  FileHandling.h  FileHandling.hpp  JsonFile.hpp  LinkedList.hpp  Menu.h  Menu.hpp  Node.h  Node.hpp  Person.h  Person.hpp
tests/: CMakeLists.txt  Catch.hpp  TestFamilyTree.cpp
